# rmtrash-windows

./: .gitignore  0 Managing the Windows Recycle Bin.md  Makefile  Makefile.mingw  Makefile.msvc  README.md  pyproject.toml  rmtrash.cpp  rmtrash.py
.github/workflows/: release.yml
src/: rmtrash.c  rmtrash.cpp
