[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rmtrash-windows"
version = "0.1.0"
description = "Recycle Bin helper command for Windows"
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.8"
authors = [{name = "aont"}]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: System :: Filesystems",
]

[project.scripts]
rmtrash = "rmtrash:main"

[tool.setuptools]
py-modules = ["rmtrash"]
